[gd_scene load_steps=33 format=3 uid="uid://dvae065e8oo3"]

[ext_resource type="Script" path="res://src/objects/enemies/scripts/ghost.gd" id="1_eewrg"]
[ext_resource type="Texture2D" uid="uid://pucl0x5jqyi7" path="res://src/objects/enemies/textures/ghost_idle.png" id="1_yxvag"]
[ext_resource type="Material" uid="uid://chy3rg8ymj8hp" path="res://src/shared/shaders/shining.tres" id="2_fuqh1"]
[ext_resource type="Texture2D" uid="uid://63wxtca0tdn4" path="res://src/objects/enemies/textures/ghost_appears.png" id="2_y6nrm"]
[ext_resource type="PackedScene" uid="uid://bxfcvgarebsre" path="res://src/systems/drop.tscn" id="4_6vy4p"]
[ext_resource type="Texture2D" uid="uid://dhnsi47c2vmm8" path="res://src/objects/enemies/textures/ghost_shriek.png" id="4_juqg0"]
[ext_resource type="Texture2D" uid="uid://cwxv0vtw4xoc7" path="res://src/objects/enemies/textures/ghost_vanish.png" id="5_a3dpc"]
[ext_resource type="Script" path="res://src/spawner/res/one/spawn_coin.gd" id="5_cntmm"]
[ext_resource type="PackedScene" uid="uid://c0cbsac27kyye" path="res://src/shared/room_notifier_2d.tscn" id="6_coxhh"]
[ext_resource type="Script" path="res://src/spawner/res/several/spawn_repeat.gd" id="6_oe2nc"]
[ext_resource type="PackedScene" uid="uid://cmobbg2dk3rip" path="res://src/systems/life_points.tscn" id="7_agja5"]
[ext_resource type="Script" path="res://src/spawner/res/one/spawn_experience.gd" id="7_d77a6"]
[ext_resource type="Script" path="res://src/spawner/res/several/spawn_each.gd" id="8_3c2rv"]
[ext_resource type="Script" path="res://src/spawner/res/one/spawn_maybe.gd" id="8_fnyd4"]
[ext_resource type="PackedScene" uid="uid://b56aihlp5saww" path="res://src/gui/life_points_meter.tscn" id="8_h4oqv"]
[ext_resource type="Texture2D" uid="uid://dsyfkwvq23w04" path="res://src/objects/enemies/textures/ghost_dying.png" id="10_jc27i"]

[sub_resource type="Resource" id="Resource_c3cws"]
script = ExtResource("5_cntmm")
expulse_cone = 35.0
expulse_strength = Vector2(180, 200)
expulse_direction = Vector2(0, -1)

[sub_resource type="Resource" id="Resource_5ubdy"]
script = ExtResource("6_oe2nc")
repeat = 2
content = SubResource("Resource_c3cws")
delay_between_spawn = 0.0

[sub_resource type="Resource" id="Resource_urcrh"]
script = ExtResource("7_d77a6")
expulse_cone = 35.0
expulse_strength = Vector2(180, 200)
expulse_direction = Vector2(0, -1)

[sub_resource type="Resource" id="Resource_l23mn"]
script = ExtResource("6_oe2nc")
repeat = 3
content = SubResource("Resource_urcrh")
delay_between_spawn = 0.0

[sub_resource type="Resource" id="Resource_l41in"]
script = ExtResource("5_cntmm")
expulse_cone = 35.0
expulse_strength = Vector2(180, 200)
expulse_direction = Vector2(0, -1)

[sub_resource type="Resource" id="Resource_86ubu"]
script = ExtResource("8_fnyd4")
content = SubResource("Resource_l41in")
probability = 0.5

[sub_resource type="Resource" id="Resource_6kop2"]
script = ExtResource("7_d77a6")
expulse_cone = 35.0
expulse_strength = Vector2(180, 200)
expulse_direction = Vector2(0, -1)

[sub_resource type="Resource" id="Resource_6w5wh"]
script = ExtResource("8_fnyd4")
content = SubResource("Resource_6kop2")
probability = 0.25

[sub_resource type="Resource" id="Resource_var3u"]
script = ExtResource("8_3c2rv")
each_spawns = Array[Resource("res://src/spawner/res/spawn.gd")]([SubResource("Resource_5ubdy"), SubResource("Resource_l23mn"), SubResource("Resource_86ubu"), SubResource("Resource_6w5wh")])
each_preview_index = 0
delay_between_spawn = 0.0

[sub_resource type="Animation" id="Animation_6dnyg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yxvag")]
}

[sub_resource type="Animation" id="Animation_t0lg3"]
resource_name = "appear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_y6nrm")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_sie33"]
resource_name = "dying"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_jc27i")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_lsdum"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yxvag")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_clarj"]
resource_name = "shriek"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_juqg0")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_7wu0x"]
resource_name = "vanish"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_a3dpc")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6l6k7"]
_data = {
"RESET": SubResource("Animation_6dnyg"),
"appear": SubResource("Animation_t0lg3"),
"dying": SubResource("Animation_sie33"),
"idle": SubResource("Animation_lsdum"),
"shriek": SubResource("Animation_clarj"),
"vanish": SubResource("Animation_7wu0x")
}

[node name="Ghost" type="Node2D"]
script = ExtResource("1_eewrg")

[node name="Sprite" type="Sprite2D" parent="."]
material = ExtResource("2_fuqh1")
position = Vector2(-32, -48)
texture = ExtResource("1_yxvag")
centered = false
hframes = 7

[node name="Systems" type="Node" parent="."]

[node name="Drop" parent="Systems" instance=ExtResource("4_6vy4p")]
drop_content = SubResource("Resource_var3u")

[node name="LifePoints" parent="Systems" instance=ExtResource("7_agja5")]

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackDetector"]
visible = false
polygon = PackedVector2Array(0, -8, -8, -12, -12, -24, -8, -36, 0, -44, 8, -36, 12, -24, 8, -12)

[node name="LifePointsMeter" parent="." node_paths=PackedStringArray("life_points_system") instance=ExtResource("8_h4oqv")]
offset_left = -16.0
offset_top = -51.0
offset_right = 16.0
offset_bottom = -48.0
life_points_system = NodePath("../Systems/LifePoints")
metadata/_edit_use_anchors_ = true

[node name="RoomNotifier2D" parent="." instance=ExtResource("6_coxhh")]
listen_room_on = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
libraries = {
"": SubResource("AnimationLibrary_6l6k7")
}

[connection signal="damage_taken" from="Systems/LifePoints" to="." method="_on_life_points_damage_taken"]
[connection signal="player_enter" from="RoomNotifier2D" to="." method="_on_room_notifier_2d_player_enter"]
[connection signal="player_leave" from="RoomNotifier2D" to="." method="_on_room_notifier_2d_player_leave"]
